fixed audiomeet logo and under card text readability

--- a/src/style/home/Header.scss
+++ b/src/style/home/Header.scss
@@ -40,7 +40,7 @@
 .audiomeet-span{
   display: flex;
   align-self: center;
-  margin-right:-1rem;
+  margin-right:3rem;
   font-size: 30px;
   color: grey;
 }
